# easy-sync

./: .envrc  .gitignore  README.md  flake.nix  pyproject.toml
.github/workflows/: python-package.yml
src/easy_async/: __init__.py
src/easy_sync/: __init__.py  transform.py
test/: test_complicated_case.py  test_name_reuse_style.py  test_nested_case.py  test_simple_case.py  test_so_question.py
test/asyncer_impl/: test_asyncer_impl.py
test/bad_impl_1/: test_impl_1.py
test/bad_impl_2/: test_impl_2.py
test/poc/asyncer_impl/: asyncer_impl.py  test_asyncer_impl.py
test/poc/asyncio_impl/: asyncio_impl.py
test/poc/transform_impl/: nested_function.py  test_exec.py
