[tool.poetry]
name = "easy-async"
version = "0.1.0"
description = "Implement a Python async function and get it's sync version for free"
authors = [ "Luo Chen <luochen1990@gmail.com>" ]
repository = "https://github.com/luochen1990/easy-async"
readme = "README.md"
include = ["src"]

[tool.poetry.dependencies]
python = ">=3.10,<4"

[tool.poetry.group.test.dependencies]
pytest = "^8.2.2"
pytest-xdist = "^3.6.1"
pytest-cov = "^5.0.0"

[tool.poetry.group.dev.dependencies]
asyncer = "^0.0.7"
pyright = "^1.1.373"
funix = "^0.5.8"

[tool.pytest.ini_options]
testpaths = ["test"]
addopts = "-n auto"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
