[tool.poetry]
name = "easy-sync"
version = "0.2.0"
description = "Provide sync compatibility for your async functions"
authors = [ "Luo Chen <luochen1990@gmail.com>" ]
repository = "https://github.com/luochen1990/easy-sync"
readme = "README.md"
include = ["src"]

[tool.poetry.dependencies]
python = ">=3.10,<4"

[tool.poetry.group.test.dependencies]
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
asyncer = "^0.0.7"

[tool.poetry.group.dev.dependencies]
pyright = "^1.1.373"

[tool.pytest.ini_options]
testpaths = ["test"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
